# zadanie_dirwatcher

./: .gitignore  pyproject.toml  requirements.in  requirements.txt  setup.cfg
dirwatcher/: checkpoint_store_port.py  conftest.py  hasher_port.py  watcher_api.py  watcher_api_test.py  watcher_cli.py  watcher_cli_test.py  watcher_service.py  watcher_service_test.py
dirwatcher/infrastructure/: checkpoint_store.py  checkpoint_store_test.py  hasher.py  traverser.py  traverser_test.py
dirwatcher/infrastructure/test_data/: example_checkpoint_store.json
