[metadata]
name = dirwatcher
author = Krzysztof Wiśniewski
author_email = krzysztof.wisniewski@bottega.com
description = A simple utility that can watch for changes to the files in the specified directory
version = 1.0.0
url = https://github.com/k-wisniewski/dirwatcher
license = CC BY-NC-SA 4.0

[options]
install_requires =
    flask
    click

packages = find:

[options.entry_points]
console_scripts =
    dirwatcher-cli = dirwatcher.watcher_cli:cli
